crates/valen-parser/tests/snapshots/parser__while_loop.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn f() { while running { tick(); } }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Internal,
            name: "f",
            generics: [],
            params: [],
            return_type: None,
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        While(
                            WhileExpr {
                                cond: Path(
                                    Path {
                                        segments: [
                                            PathSegment {
                                                name: "running",
                                                double_colon: false,
                                                generics: [],
                                                span: Span {
                                                    start: 15,
                                                    end: 22,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 15,
                                            end: 22,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                body: Block {
                                    stmts: [
                                        ExprSemi(
                                            Call(
                                                CallExpr {
                                                    callee: Path(
                                                        Path {
                                                            segments: [
                                                                PathSegment {
                                                                    name: "tick",
                                                                    double_colon: false,
                                                                    generics: [],
                                                                    span: Span {
                                                                        start: 25,
                                                                        end: 29,
                                                                        file_id: FileId(
                                                                            0,
                                                                        ),
                                                                    },
                                                                },
                                                            ],
                                                            span: Span {
                                                                start: 25,
                                                                end: 29,
                                                                file_id: FileId(
                                                                    0,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                    args: [],
                                                    span: Span {
                                                        start: 25,
                                                        end: 31,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                    tail: None,
                                    span: Span {
                                        start: 23,
                                        end: 34,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 34,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 7,
                        end: 36,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            span: Span {
                start: 0,
                end: 36,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
